# tbo-EventEase

./: .gitignore  README.md  package-lock.json
ai/eventItineraryAgent/: constants.py  eventPlanningAgent.py  itineraryGeneratingAgent.py  locationSuggestingAgent.py  requirementExtractingAgent.py
ai/tboeventcrew/: README.md  pyproject.toml
ai/tboeventcrew/src/tboeventcrew/: crew.py  main.py
ai/tboeventcrew/src/tboeventcrew/config/: agents.yaml  tasks.yaml
ai/tboeventcrew/src/tboeventcrew/tools/: custom_tool.py
web/: package-lock.json  package.json  readme.md
web/controllers/: user.js
web/models/: Event.js  Itinerary.js  User.js  User_Attend_Res.js
web/public/css/: dashboard.css  homeParkEace.css  styles.css
web/routes/: api.js  route.js
web/views/: chat_updated.ejs  dashboard.ejs  event.ejs  expenses.ejs  itinary.html  itinerary.ejs  landing_page.ejs  liabilities.ejs  login.ejs  register.ejs  user_dashboard.ejs
